tdf#89927: PPTX import: Incorrect inheritance of text run fill properties

Make use of FillProperties in TextCharacterProperties.  DrawingML:
Fill related elements in Text Run Properties are in sync with Table
Cell Properties and all of Line Properties.

Change-Id: I7c513ecfc5f94cf49e98a657384b5c0f5dddc1c7